parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    GET
    CORCHETEIZQUIERDO
    PUNTO
    COMILLASDOBLES
    CORCHETEDERECHO

Grammar

Rule 0     S' -> programa
Rule 1     programa -> encabezado dec_lst funciones
Rule 2     programa -> encabezado funciones
Rule 3     programa -> dec_lst funciones
Rule 4     programa -> encabezado dec_lst funciones dec_lst funciones
Rule 5     programa -> funciones
Rule 6     dec_lst -> dec_lst declaracionfun
Rule 7     dec_lst -> declaracionfun
Rule 8     funciones -> tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
Rule 9     funciones -> tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
Rule 10    funciones -> funciones tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
Rule 11    funciones -> funciones tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
Rule 12    parametros -> parametros COMA ID
Rule 13    parametros -> parametros COMA NUMBER
Rule 14    parametros -> ID
Rule 15    parametros -> NUMBER
Rule 16    paramdec -> paramdec COMA tipo ID
Rule 17    paramdec -> paramdec COMA tipo NUMBER
Rule 18    paramdec -> tipo ID
Rule 19    paramdec -> tipo NUMBER
Rule 20    paramdeclaraciones -> paramdeclaraciones COMA tipo
Rule 21    paramdeclaraciones -> tipo
Rule 22    paramcallfun -> paramcallfun COMA ID
Rule 23    paramcallfun -> paramcallfun COMA NUMBER
Rule 24    paramcallfun -> ID
Rule 25    paramcallfun -> NUMBER
Rule 26    funciones -> tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
Rule 27    todo -> todo cout
Rule 28    todo -> todo declaracion
Rule 29    todo -> todo cin
Rule 30    todo -> todo dec
Rule 31    todo -> todo inc
Rule 32    todo -> todo seleccion
Rule 33    todo -> todo iteracion
Rule 34    todo -> todo repeticion
Rule 35    todo -> todo operaciones
Rule 36    todo -> todo callfun
Rule 37    todo -> todo return
Rule 38    todo -> todo powgen
Rule 39    todo -> powgen
Rule 40    todo -> return
Rule 41    todo -> declaracion
Rule 42    todo -> cout
Rule 43    todo -> cin
Rule 44    todo -> dec
Rule 45    todo -> inc
Rule 46    todo -> seleccion
Rule 47    todo -> iteracion
Rule 48    todo -> repeticion
Rule 49    todo -> operaciones
Rule 50    todo -> callfun
Rule 51    encabezado -> encabezado lib
Rule 52    encabezado -> lib
Rule 53    lib -> NUMERAL INCLUDE MENORQUE ID MAYORQUE
Rule 54    lib -> NUMERAL INCLUDE MENORQUE ID MATH MAYORQUE
Rule 55    lib -> NAMESPACE_MOD PUNTOYCOMA
Rule 56    callfun -> callfun ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
Rule 57    callfun -> ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
Rule 58    callfun -> callfun ID PARENTESISIZQUIERDO paramcallfun PARENTESISDERECHO PUNTOYCOMA
Rule 59    callfun -> ID PARENTESISIZQUIERDO paramcallfun PARENTESISDERECHO PUNTOYCOMA
Rule 60    callcout -> callcout pow
Rule 61    callcout -> pow
Rule 62    callcout -> callcout ID PARENTESISIZQUIERDO paramcallfun PARENTESISDERECHO
Rule 63    callcout -> ID PARENTESISIZQUIERDO paramcallfun PARENTESISDERECHO
Rule 64    callcout -> callcout ID PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 65    callcout -> ID PARENTESISIZQUIERDO PARENTESISDERECHO
Rule 66    contenidos -> contenidos cout
Rule 67    contenidos -> contenidos cin
Rule 68    contenidos -> contenidos seleccion
Rule 69    contenidos -> contenidos iteracion
Rule 70    contenidos -> contenidos repeticion
Rule 71    contenidos -> contenidos operaciones
Rule 72    contenidos -> contenidos inc
Rule 73    contenidos -> contenidos dec
Rule 74    contenidos -> inc contenidos
Rule 75    contenidos -> dec contenidos
Rule 76    contenidos -> cout
Rule 77    contenidos -> cin
Rule 78    contenidos -> seleccion
Rule 79    contenidos -> iteracion
Rule 80    contenidos -> repeticion
Rule 81    contenidos -> operaciones
Rule 82    contenidos -> inc
Rule 83    contenidos -> dec
Rule 84    contenidos -> return
Rule 85    contenidos -> contenidos return
Rule 86    declaracionfun -> tipo ID IGUAL NUMBER PUNTOYCOMA
Rule 87    declaracionfun -> tipo ID PUNTOYCOMA
Rule 88    declaracionfun -> tipo ID IGUAL ID PUNTOYCOMA
Rule 89    declaracionfun -> tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
Rule 90    declaracionfun -> tipo ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA
Rule 91    declaracion -> tipo ID IGUAL NUMBER PUNTOYCOMA
Rule 92    declaracion -> tipo ID PUNTOYCOMA
Rule 93    declaracion -> tipo ID IGUAL ID PUNTOYCOMA
Rule 94    declaracion -> tipo ID IGUAL STRING PUNTOYCOMA
Rule 95    tipo -> INT
Rule 96    tipo -> CHAR
Rule 97    tipo -> VOID
Rule 98    tipo -> STRINGJC
Rule 99    cout -> COUT DOBLEMENORQUE repcout PUNTOYCOMA
Rule 100   repcout -> repcout cout1
Rule 101   repcout -> cout1
Rule 102   cout1 -> general repcout
Rule 103   cout1 -> DOBLEMENORQUE general
Rule 104   cout1 -> general
Rule 105   general -> STRING
Rule 106   general -> ID
Rule 107   general -> NUMBER
Rule 108   general -> callcout
Rule 109   general -> ENDL
Rule 110   general -> STRING DOBLEMENORQUE general
Rule 111   general -> ID DOBLEMENORQUE general
Rule 112   general -> NUMBER DOBLEMENORQUE general
Rule 113   general -> callcout DOBLEMENORQUE general
Rule 114   general -> ENDL DOBLEMENORQUE general
Rule 115   general -> STRING DOBLEMENORQUE STRING
Rule 116   general -> ID DOBLEMENORQUE ID
Rule 117   general -> NUMBER DOBLEMENORQUE NUMBER
Rule 118   general -> callcout DOBLEMENORQUE callcout
Rule 119   general -> ENDL DOBLEMENORQUE ENDL
Rule 120   general -> DOBLEMENORQUE STRING
Rule 121   general -> DOBLEMENORQUE ID
Rule 122   general -> DOBLEMENORQUE NUMBER
Rule 123   general -> DOBLEMENORQUE callcout
Rule 124   general -> DOBLEMENORQUE ENDL
Rule 125   general -> general
Rule 126   cin -> CIN DOBLEMAYORQUE repcin PUNTOYCOMA
Rule 127   repcin -> repcin cin1
Rule 128   repcin -> cin1
Rule 129   cin1 -> generalcin repcin
Rule 130   cin1 -> DOBLEMAYORQUE generalcin
Rule 131   cin1 -> generalcin
Rule 132   generalcin -> ID
Rule 133   generalcin -> ID DOBLEMAYORQUE generalcin
Rule 134   generalcin -> ID DOBLEMAYORQUE ID
Rule 135   generalcin -> DOBLEMAYORQUE ID
Rule 136   generalcin -> generalcin
Rule 137   inc -> ID PLUS PUNTOYCOMA
Rule 138   inc -> PLUS ID PUNTOYCOMA
Rule 139   dec -> MENOSMENOS ID PUNTOYCOMA
Rule 140   ciclos -> ID IGUAL NUMBER
Rule 141   ciclos -> ID DOBLEIGUAL NUMBER
Rule 142   ciclos -> ID MENORQUE NUMBER
Rule 143   ciclos -> ID MAYORQUE NUMBER
Rule 144   ciclos -> ID MENOROIGUAL NUMBER
Rule 145   ciclos -> ID MAYOROIGUAL NUMBER
Rule 146   ciclos -> ID IGUAL ID
Rule 147   ciclos -> ID DOBLEIGUAL ID
Rule 148   ciclos -> ID MENORQUE ID
Rule 149   ciclos -> ID MAYORQUE ID
Rule 150   ciclos -> ID MENOROIGUAL ID
Rule 151   ciclos -> ID MAYOROIGUAL ID
Rule 152   ciclos -> ID DISTINTODE NUMBER
Rule 153   ciclos -> ID DISTINTODE ID
Rule 154   ciclos -> ID PLUS
Rule 155   ciclos -> ID MENOSMENOS
Rule 156   ciclos -> ID DOBLEIGUAL
Rule 157   ciclos -> ID DISTINTODE
Rule 158   ciclos -> ID
Rule 159   seleccion -> IF PARENTESISIZQUIERDO ciclos PARENTESISDERECHO LLAVEIZQUIERDA contenidos LLAVEDERECHA
Rule 160   seleccion -> IF PARENTESISIZQUIERDO ciclos PARENTESISDERECHO LLAVEIZQUIERDA contenidos LLAVEDERECHA ELSE LLAVEIZQUIERDA contenidos LLAVEDERECHA
Rule 161   iteracion -> WHILE PARENTESISIZQUIERDO ciclos PARENTESISDERECHO LLAVEIZQUIERDA contenidos LLAVEDERECHA
Rule 162   repeticion -> FOR PARENTESISIZQUIERDO ciclos PUNTOYCOMA ciclos PUNTOYCOMA ciclos PARENTESISDERECHO LLAVEIZQUIERDA contenidos LLAVEDERECHA
Rule 163   operadores -> MAS ID
Rule 164   operadores -> MENOS ID
Rule 165   operadores -> ASTERISCO ID
Rule 166   operadores -> DIVISION ID
Rule 167   operadores -> PORCENTAJE ID
Rule 168   operadores -> PORCENTAJE NUMBER
Rule 169   operadores -> MAS NUMBER
Rule 170   operadores -> MENOS NUMBER
Rule 171   operadores -> ASTERISCO NUMBER
Rule 172   operadores -> DIVISION NUMBER
Rule 173   operadores -> MAS callcout
Rule 174   operadores -> MENOS callcout
Rule 175   operadores -> ASTERISCO callcout
Rule 176   operadores -> DIVISION callcout
Rule 177   operadores -> PORCENTAJE callcout
Rule 178   ope_list -> ope_list operadores
Rule 179   ope_list -> empty
Rule 180   operaciones -> ID IGUAL ID ope_list PUNTOYCOMA
Rule 181   operaciones -> ID IGUAL NUMBER ope_list PUNTOYCOMA
Rule 182   operaciones -> ID IGUAL ID PUNTOYCOMA
Rule 183   operaciones -> ID IGUAL NUMBER PUNTOYCOMA
Rule 184   operaciones -> ID IGUAL ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
Rule 185   operaciones -> ID IGUAL ID PARENTESISIZQUIERDO paramcallfun PARENTESISDERECHO ope_list PUNTOYCOMA
Rule 186   return -> RETURN NUMBER PUNTOYCOMA
Rule 187   return -> RETURN ID PUNTOYCOMA
Rule 188   idnumpow -> idnumpow ID
Rule 189   idnumpow -> idnumpow NUMBER
Rule 190   idnumpow -> ID
Rule 191   idnumpow -> NUMBER
Rule 192   pow -> POW PARENTESISIZQUIERDO idnumpow COMA idnumpow PARENTESISDERECHO
Rule 193   pow -> SIN PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO
Rule 194   pow -> COS PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO
Rule 195   pow -> TAN PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO
Rule 196   pow -> SQRT PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO
Rule 197   powgen -> POW PARENTESISIZQUIERDO idnumpow COMA idnumpow PARENTESISDERECHO PUNTOYCOMA
Rule 198   powgen -> SIN PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO PUNTOYCOMA
Rule 199   powgen -> COS PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO PUNTOYCOMA
Rule 200   powgen -> TAN PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO PUNTOYCOMA
Rule 201   powgen -> SQRT PARENTESISIZQUIERDO idnumpow PARENTESISDERECHO PUNTOYCOMA
Rule 202   powgen -> ID IGUAL powgen
Rule 203   powgen -> ID IGUAL pow ope_list PUNTOYCOMA
Rule 204   empty -> <empty>

Terminals, with rules where they appear

ASTERISCO            : 165 171 175
CHAR                 : 96
CIN                  : 126
COMA                 : 12 13 16 17 20 22 23 192 197
COMILLASDOBLES       : 
CORCHETEDERECHO      : 
CORCHETEIZQUIERDO    : 
COS                  : 194 199
COUT                 : 99
DISTINTODE           : 152 153 157
DIVISION             : 166 172 176
DOBLEIGUAL           : 141 147 156
DOBLEMAYORQUE        : 126 130 133 134 135
DOBLEMENORQUE        : 99 103 110 111 112 113 114 115 116 117 118 119 120 121 122 123 124
ELSE                 : 160
ENDL                 : 109 114 119 119 124
FOR                  : 162
GET                  : 
ID                   : 8 9 10 11 12 14 16 18 22 24 26 53 54 56 57 58 59 62 63 64 65 86 87 88 88 89 90 91 92 93 93 94 106 111 116 116 121 132 133 134 134 135 137 138 139 140 141 142 143 144 145 146 146 147 147 148 148 149 149 150 150 151 151 152 153 153 154 155 156 157 158 163 164 165 166 167 180 180 181 182 182 183 184 184 185 185 187 188 190 202 203
IF                   : 159 160
IGUAL                : 86 88 91 93 94 140 146 180 181 182 183 184 185 202 203
INCLUDE              : 53 54
INT                  : 95
LLAVEDERECHA         : 8 9 10 11 26 159 160 160 161 162
LLAVEIZQUIERDA       : 8 9 10 11 26 159 160 160 161 162
MAS                  : 163 169 173
MATH                 : 54
MAYOROIGUAL          : 145 151
MAYORQUE             : 53 54 143 149
MENOROIGUAL          : 144 150
MENORQUE             : 53 54 142 148
MENOS                : 164 170 174
MENOSMENOS           : 139 155
NAMESPACE_MOD        : 55
NUMBER               : 13 15 17 19 23 25 86 91 107 112 117 117 122 140 141 142 143 144 145 152 168 169 170 171 172 181 183 186 189 191
NUMERAL              : 53 54
PARENTESISDERECHO    : 8 9 10 11 26 56 57 58 59 62 63 64 65 89 90 159 160 161 162 184 185 192 193 194 195 196 197 198 199 200 201
PARENTESISIZQUIERDO  : 8 9 10 11 26 56 57 58 59 62 63 64 65 89 90 159 160 161 162 184 185 192 193 194 195 196 197 198 199 200 201
PLUS                 : 137 138 154
PORCENTAJE           : 167 168 177
POW                  : 192 197
PUNTO                : 
PUNTOYCOMA           : 55 56 57 58 59 86 87 88 89 90 91 92 93 94 99 126 137 138 139 162 162 180 181 182 183 184 185 186 187 197 198 199 200 201 203
RETURN               : 186 187
SIN                  : 193 198
SQRT                 : 196 201
STRING               : 94 105 110 115 115 120
STRINGJC             : 98
TAN                  : 195 200
VOID                 : 97
WHILE                : 161
error                : 

Nonterminals, with rules where they appear

callcout             : 60 62 64 108 113 118 118 123 173 174 175 176 177
callfun              : 36 50 56 58
ciclos               : 159 160 161 162 162 162
cin                  : 29 43 67 77
cin1                 : 127 128
contenidos           : 66 67 68 69 70 71 72 73 74 75 85 159 160 160 161 162
cout                 : 27 42 66 76
cout1                : 100 101
dec                  : 30 44 73 75 83
dec_lst              : 1 3 4 4 6
declaracion          : 28 41
declaracionfun       : 6 7
empty                : 179
encabezado           : 1 2 4 51
funciones            : 1 2 3 4 4 5 10 11
general              : 102 103 104 110 111 112 113 114 125
generalcin           : 129 130 131 133 136
idnumpow             : 188 189 192 192 193 194 195 196 197 197 198 199 200 201
inc                  : 31 45 72 74 82
iteracion            : 33 47 69 79
lib                  : 51 52
ope_list             : 178 180 181 185 203
operaciones          : 35 49 71 81
operadores           : 178
paramcallfun         : 22 23 58 59 62 63 185
paramdec             : 9 11 16 17
paramdeclaraciones   : 20 90
parametros           : 12 13
pow                  : 60 61 203
powgen               : 38 39 202
programa             : 0
repcin               : 126 127 129
repcout              : 99 100 102
repeticion           : 34 48 70 80
return               : 37 40 84 85
seleccion            : 32 46 68 78
tipo                 : 8 9 10 11 16 17 18 19 20 21 26 86 87 88 89 90 91 92 93 94
todo                 : 8 9 10 11 27 28 29 30 31 32 33 34 35 36 37 38

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . encabezado dec_lst funciones
    (2) programa -> . encabezado funciones
    (3) programa -> . dec_lst funciones
    (4) programa -> . encabezado dec_lst funciones dec_lst funciones
    (5) programa -> . funciones
    (51) encabezado -> . encabezado lib
    (52) encabezado -> . lib
    (6) dec_lst -> . dec_lst declaracionfun
    (7) dec_lst -> . declaracionfun
    (8) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (10) funciones -> . funciones tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> . funciones tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (53) lib -> . NUMERAL INCLUDE MENORQUE ID MAYORQUE
    (54) lib -> . NUMERAL INCLUDE MENORQUE ID MATH MAYORQUE
    (55) lib -> . NAMESPACE_MOD PUNTOYCOMA
    (86) declaracionfun -> . tipo ID IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> . tipo ID PUNTOYCOMA
    (88) declaracionfun -> . tipo ID IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> . tipo ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    NUMERAL         shift and go to state 4
    NAMESPACE_MOD   shift and go to state 8
    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 5
    lib                            shift and go to state 9
    encabezado                     shift and go to state 10
    dec_lst                        shift and go to state 2
    programa                       shift and go to state 12
    declaracionfun                 shift and go to state 13
    funciones                      shift and go to state 6

state 1

    (97) tipo -> VOID .

    ID              reduce using rule 97 (tipo -> VOID .)
    PARENTESISDERECHO reduce using rule 97 (tipo -> VOID .)
    COMA            reduce using rule 97 (tipo -> VOID .)
    NUMBER          reduce using rule 97 (tipo -> VOID .)


state 2

    (3) programa -> dec_lst . funciones
    (6) dec_lst -> dec_lst . declaracionfun
    (8) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (10) funciones -> . funciones tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> . funciones tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (86) declaracionfun -> . tipo ID IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> . tipo ID PUNTOYCOMA
    (88) declaracionfun -> . tipo ID IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> . tipo ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 5
    declaracionfun                 shift and go to state 14
    funciones                      shift and go to state 15

state 3

    (96) tipo -> CHAR .

    ID              reduce using rule 96 (tipo -> CHAR .)
    PARENTESISDERECHO reduce using rule 96 (tipo -> CHAR .)
    COMA            reduce using rule 96 (tipo -> CHAR .)
    NUMBER          reduce using rule 96 (tipo -> CHAR .)


state 4

    (53) lib -> NUMERAL . INCLUDE MENORQUE ID MAYORQUE
    (54) lib -> NUMERAL . INCLUDE MENORQUE ID MATH MAYORQUE

    INCLUDE         shift and go to state 16


state 5

    (8) funciones -> tipo . ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> tipo . ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> tipo . ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (86) declaracionfun -> tipo . ID IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> tipo . ID PUNTOYCOMA
    (88) declaracionfun -> tipo . ID IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> tipo . ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> tipo . ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA

    ID              shift and go to state 17


state 6

    (5) programa -> funciones .
    (10) funciones -> funciones . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> funciones . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    $end            reduce using rule 5 (programa -> funciones .)
    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 18

state 7

    (98) tipo -> STRINGJC .

    ID              reduce using rule 98 (tipo -> STRINGJC .)
    PARENTESISDERECHO reduce using rule 98 (tipo -> STRINGJC .)
    COMA            reduce using rule 98 (tipo -> STRINGJC .)
    NUMBER          reduce using rule 98 (tipo -> STRINGJC .)


state 8

    (55) lib -> NAMESPACE_MOD . PUNTOYCOMA

    PUNTOYCOMA      shift and go to state 19


state 9

    (52) encabezado -> lib .

    NUMERAL         reduce using rule 52 (encabezado -> lib .)
    NAMESPACE_MOD   reduce using rule 52 (encabezado -> lib .)
    INT             reduce using rule 52 (encabezado -> lib .)
    CHAR            reduce using rule 52 (encabezado -> lib .)
    VOID            reduce using rule 52 (encabezado -> lib .)
    STRINGJC        reduce using rule 52 (encabezado -> lib .)


state 10

    (1) programa -> encabezado . dec_lst funciones
    (2) programa -> encabezado . funciones
    (4) programa -> encabezado . dec_lst funciones dec_lst funciones
    (51) encabezado -> encabezado . lib
    (6) dec_lst -> . dec_lst declaracionfun
    (7) dec_lst -> . declaracionfun
    (8) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (10) funciones -> . funciones tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> . funciones tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (53) lib -> . NUMERAL INCLUDE MENORQUE ID MAYORQUE
    (54) lib -> . NUMERAL INCLUDE MENORQUE ID MATH MAYORQUE
    (55) lib -> . NAMESPACE_MOD PUNTOYCOMA
    (86) declaracionfun -> . tipo ID IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> . tipo ID PUNTOYCOMA
    (88) declaracionfun -> . tipo ID IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> . tipo ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    NUMERAL         shift and go to state 4
    NAMESPACE_MOD   shift and go to state 8
    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 5
    lib                            shift and go to state 22
    dec_lst                        shift and go to state 20
    declaracionfun                 shift and go to state 13
    funciones                      shift and go to state 21

state 11

    (95) tipo -> INT .

    ID              reduce using rule 95 (tipo -> INT .)
    PARENTESISDERECHO reduce using rule 95 (tipo -> INT .)
    COMA            reduce using rule 95 (tipo -> INT .)
    NUMBER          reduce using rule 95 (tipo -> INT .)


state 12

    (0) S' -> programa .



state 13

    (7) dec_lst -> declaracionfun .

    INT             reduce using rule 7 (dec_lst -> declaracionfun .)
    CHAR            reduce using rule 7 (dec_lst -> declaracionfun .)
    VOID            reduce using rule 7 (dec_lst -> declaracionfun .)
    STRINGJC        reduce using rule 7 (dec_lst -> declaracionfun .)


state 14

    (6) dec_lst -> dec_lst declaracionfun .

    INT             reduce using rule 6 (dec_lst -> dec_lst declaracionfun .)
    CHAR            reduce using rule 6 (dec_lst -> dec_lst declaracionfun .)
    VOID            reduce using rule 6 (dec_lst -> dec_lst declaracionfun .)
    STRINGJC        reduce using rule 6 (dec_lst -> dec_lst declaracionfun .)


state 15

    (3) programa -> dec_lst funciones .
    (10) funciones -> funciones . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> funciones . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    $end            reduce using rule 3 (programa -> dec_lst funciones .)
    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 18

state 16

    (53) lib -> NUMERAL INCLUDE . MENORQUE ID MAYORQUE
    (54) lib -> NUMERAL INCLUDE . MENORQUE ID MATH MAYORQUE

    MENORQUE        shift and go to state 23


state 17

    (8) funciones -> tipo ID . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> tipo ID . PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> tipo ID . PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (86) declaracionfun -> tipo ID . IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> tipo ID . PUNTOYCOMA
    (88) declaracionfun -> tipo ID . IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> tipo ID . PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> tipo ID . PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA

    PARENTESISIZQUIERDO shift and go to state 25
    IGUAL           shift and go to state 24
    PUNTOYCOMA      shift and go to state 26


state 18

    (10) funciones -> funciones tipo . ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> funciones tipo . ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA

    ID              shift and go to state 27


state 19

    (55) lib -> NAMESPACE_MOD PUNTOYCOMA .

    NUMERAL         reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)
    NAMESPACE_MOD   reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)
    INT             reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)
    CHAR            reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)
    VOID            reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)
    STRINGJC        reduce using rule 55 (lib -> NAMESPACE_MOD PUNTOYCOMA .)


state 20

    (1) programa -> encabezado dec_lst . funciones
    (4) programa -> encabezado dec_lst . funciones dec_lst funciones
    (6) dec_lst -> dec_lst . declaracionfun
    (8) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (9) funciones -> . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (10) funciones -> . funciones tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> . funciones tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (26) funciones -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA LLAVEDERECHA
    (86) declaracionfun -> . tipo ID IGUAL NUMBER PUNTOYCOMA
    (87) declaracionfun -> . tipo ID PUNTOYCOMA
    (88) declaracionfun -> . tipo ID IGUAL ID PUNTOYCOMA
    (89) declaracionfun -> . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO PUNTOYCOMA
    (90) declaracionfun -> . tipo ID PARENTESISIZQUIERDO paramdeclaraciones PARENTESISDERECHO PUNTOYCOMA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC

    INT             shift and go to state 11
    CHAR            shift and go to state 3
    VOID            shift and go to state 1
    STRINGJC        shift and go to state 7

    tipo                           shift and go to state 5
    declaracionfun                 shift and go to state 14
    funciones                      shift and go to state 28

state 21

    (2) programa -> encabezado funciones .
    (10) funciones -> funciones . tipo ID PARENTESISIZQUIERDO PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (11) funciones -> funciones . tipo ID PARENTESISIZQUIERDO paramdec PARENTESISDERECHO LLAVEIZQUIERDA todo LLAVEDERECHA
    (95) tipo -> . INT
    (96) tipo -> . CHAR
    (97) tipo -> . VOID
    (98) tipo -> . STRINGJC
